k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5000
